# Minaton-XT

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FactoryPresets.cmake  Packing.cmake  PackingComponents.cmake
ext/WolfWidgets/: MenuWidget.cpp  MenuWidget.hpp  README.md
plugin/: DistrhoPluginInfo.h  MinatonArtwork.hpp  MinatonParamAccess.cpp  MinatonParams.cpp  MinatonParams.h  MinatonPlugin.cpp  MinatonPlugin.h  MinatonPresets.cpp  MinatonPresets.hpp  MinatonProcess.cpp  MinatonUI.cpp  MinatonUI.h  MinatonUIHelper.cpp  MinatonUIMenu.cpp  config.h.in  stb_decompress.h
src/: knob.cpp  knob.h  main_window.cpp  main_window.hpp  makefile  manifest.ttl  minaton-gui.cpp  minaton.cpp  minaton.ttl  stb_decompress.h  synth.cpp  synth.hpp  synth_dpf.cpp  synth_dpf.hpp  toggle.cpp  toggle.h
src/patches/: AUTOBAHN.minaton  EARTH STOOD STILL.minaton  HISS-TOM.minaton  HISS-TOM2.minaton  JUNOBASS.minaton  LAZER.minaton  LAZER2.minaton  LOW BUDGET SHLOCK HORROR.minaton  MARS ATTACKS.minaton  NOISE.minaton  OPEN WOUND.minaton  ORGANIC WIBBLE.minaton  POOKY.minaton  POOKY2.minaton  SH101-BASS.minaton  SINISTER.minaton  SLIDE.minaton  SQUAREMOD4FILTER.minaton  SUBTLE BASS.minaton  SWEEP.minaton  THERAMIN.minaton  TROUBLE-AT-MILL.minaton
src/patches/patches/: EARTH STOOD STILL.minaton  HISS-TOM.minaton  JUNOBASS.minaton  LAZER.minaton  LOW BUDGET SHLOCK HORROR.minaton  MARS ATTACKS.minaton  NOISE.minaton  SLIDE.minaton  SQUAREMOD4FILTER.minaton  SUBTLE BASS.minaton  TROUBLE-AT-MILL.minaton
src/work/: dca.cpp  dca.h  dcf.cpp  dcf.h  dco.cpp  dco.h  files.cpp  files.h  gui.cxx  gui.fl  gui.h  gui.txt  jack.cbp  jack.cpp  jack.depend  jack.hpp  jack.layout  main.cpp  main.h
utils/: binary_to_compressed_c.cpp  res2c_mod.py
utils/factory_bank_to_c/: CMakeLists.txt  binary_to_compressed_c.cpp  binary_to_compressed_c.hpp  fb2c_config.h.in  main.cpp
